tests/NormalTests/paczka1/fuzzy1/90655537.err
Error in line 4: sBFEZs S277 234,`
Error in line 1: 9iBQW2MSJT S963 45,0
Error in line 11: S277 S621 82,4
Error in line 14: F6Mw1qfBCKH S621 50,5
Error in line 26: sBFEZs S455 236,0
Error in line 25: S277 S277 24,1
Error in line 29: S277 S621 39,5
